--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-datepicker-bootstrap": "^0.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
